fix: jd/css/jd.css: overlap between logo and title in header

--- a/jd/css/jd.css
+++ b/jd/css/jd.css
@@ -32,6 +32,10 @@ body {
 	margin: 30px 0;
 }
 
+.header_content .title {
+	float: left;
+}
+
 .main {
 	width: 100%;
 }
